--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div id="app"></div>
     
-    <div class="parent"></div>
+    <div class="parent" id="parent"></div>
     <br/>
 
     <button id="green" class="green">get response</button>
