continuado estudos de implementação do google recaptcha, iniciado implementação de solução para concorrencia de chamada recaptcha

--- a/index.html
+++ b/index.html
@@ -8,8 +8,35 @@
 
     
     <title>Vite App</title>
+    <link rel="preconnect" href="https://www.google.com">
+    <link rel="preconnect" href="https://www.gstatic.com" crossorigin>
+    <script>
+      // How this code snippet works:
+      // This logic overwrites the default behavior of `grecaptcha.ready()` to
+      // ensure that it can be safely called at any time. When `grecaptcha.ready()`
+      // is called before reCAPTCHA is loaded, the callback function that is passed
+      // by `grecaptcha.ready()` is enqueued for execution after reCAPTCHA is
+      // loaded.
+      if(typeof grecaptcha === 'undefined') {
+        grecaptcha = {};
+      }
+      grecaptcha.ready = function(cb){
+        if(typeof grecaptcha === 'undefined') {
+          // window.__grecaptcha_cfg is a global variable that stores reCAPTCHA's
+          // configuration. By default, any functions listed in its 'fns' property
+          // are automatically executed when reCAPTCHA loads.
+          const c = '___grecaptcha_cfg';
+          window[c] = window[c] || {};
+          (window[c]['fns'] = window[c]['fns']||[]).push(cb);
+        } else {
+          cb();
+        }
+      }
+
+    </script>
+
     <script type="module" src="./src/main.js"></script>
-    
+    <script src="https://www.google.com/recaptcha/api.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   </head>
   <body>
